biosensor (0.4.0) unstable; urgency=low

  * Source distrubution now also includes cxx/hxx generated from the XSD files.
  * Added program bio-output, it can calculate steady state current density and
    halftime from a current density file.
  * Added support for the overriding symbol values in the model using command line parameters.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Sun, 05 Apr 2009 10:35:24 +0300

biosensor (0.3.8) unstable; urgency=low

  * Some bugs are fixed. Main functionality is alredy working.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Sun, 05 Apr 2009 10:33:23 +0300