@@ -4,8 +4,16 @@ biosensor (0.4.0) unstable; urgency=low
   * Added program bio-output, it can calculate steady state current density and
     halftime from a current density file.
   * Added support for the overriding symbol values in the model using command line parameters.
+  * Added support for different diffusion coefficients for different
+    axes.
+  * Simulation time is now written at the end of simulation.
+  * Implemented additional functionality in the bio-output: ability to
+    extract 1d data from 2d grid.
+  * Implemented support for reactions on the bounds.
+  * Improved support for RedOx reactions. It can now support more
+    schemes, not only a+b->c+d.
 
- -- Karolis Petrauskas <k.petrauskas@gmail.com>  Sun, 05 Apr 2009 10:35:24 +0300
+ -- Karolis Petrauskas <k.petrauskas@gmail.com>  Sat, 04 Jul 2009 12:02:16 +0300
 
 biosensor (0.3.8) unstable; urgency=low
 
